avance en services-columnas

--- a/contact-us.html
+++ b/contact-us.html
@@ -115,120 +115,142 @@
 </div>
 </div>
 
+    <div class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h3>About Us</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
+          </div>
+          <div class="col-md-3 fila">
+            <h3>Company</h3>
+            <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>The company</span>
+            </a>
 
+            <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Our Team</span>
+            </a>
 
+            <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Our Partners</span>
+            </a>
 
+            <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Our Services</span>
+            </a>
 
+            <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Faq</span>
+            </a>
 
+             <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Contact Us</span>
+            </a>
 
+             <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Privacy Policy</span>
+            </a>
 
+            <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Terms of Use</span>
+            </a>
 
+            <a href="">
+            <i class="fa fa-angle-right"></i>
+            <span>Copyright</span>
+            </a>
+          </div>
 
+          <div class="col-md-3">
+            <h3>Latest Blog</h3>
+            <div class="row foto">
+            <div class="col-md-4">
+            <a href="#">
+            <img class="media-objet" src="images/blog/thumb1.jpg">
+            </a>  
+            </div>
+            <div class="col-md-8">
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 17 Aug 2013</h6>
+            </div>
+            </div>
 
+            <div class="row foto">
+            <div class="col-md-4">
+            <a href="#">
+            <img class="media-objet" src="images/blog/thumb2.jpg">
+            </a>  
+            </div>
+            <div class="col-md-8">
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 13 Sep 2013</h6>
+            </div>
+            </div>
 
-
-
-
-
-
-
-<div class="about">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3">
-        <h3>About Us</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
-      </div>
-      <div class="col-md-3 fila">
-        <h3>Company</h3>
-        <ul>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Development</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Design</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Updates</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Tutorial</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> News</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Design</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Updates</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> Tutorial</a></li>
-                                <li><a href=""><i class="fa fa-angle-right"></i> News</a></li>
-                            </ul>
-      </div>
-
-      <div class="col-md-3">
-        <h3>Latest Blog</h3>
-        <div class="row foto">
-        <div class="col-md-4">
-        <a href="#">
-        <img class="media-objet" src="images/blog/thumb1.jpg">
-        </a>  
+            <div class="row foto">
+            <div class="col-md-4">
+            <a href="#">
+            <img class="media-objet" src="images/blog/thumb3.jpg">
+            </a>  
+            </div>
+            <div class="col-md-8">
+                <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
+                <h6>Posted 11 Jul 2013</h6>
+            </div>
+            </div>
         </div>
-        <div class="col-md-8">
-            <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
-        </div>
-        </div>
 
-        <div class="row foto">
-        <div class="col-md-4">
-        <a href="#">
-        <img class="media-objet" src="images/blog/thumb2.jpg">
-        </a>  
+          <div class="col-md-3">
+            <h3>Address</h3>
+            <br>
+            <h5>Twitter, Inc</h5>
+            <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
+            <div class="go">
+                <h3>Newsletter</h3>
+            <div class="input-group">
+            <input type="text" class="form-control" placeholder="Enter your email">
+            <span class="input-group-btn">
+            <button class="btn btn-danger" type="button">Go!</button>
+            </span>
+            </div>
+            </div>
         </div>
-        <div class="col-md-8">
-            <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
-        </div>
-        </div>
-
-        <div class="row foto">
-        <div class="col-md-4">
-        <a href="#">
-        <img class="media-objet" src="images/blog/thumb3.jpg">
-        </a>  
-        </div>
-        <div class="col-md-8">
-            <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
         </div>
         </div>
     </div>
 
-      <div class="col-md-3">
-        <h3>Address</h3>
-        <br>
-        <h5>Twitter, Inc</h5>
-        <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
-        <div class="go">
-            <h3>Newsletter</h3>
-        <div class="input-group">
-        <input type="text" class="form-control" placeholder="Enter your email">
-        <span class="input-group-btn">
-        <button class="btn btn-default" type="button">Go!</button>
-        </span>
+    <footer>
+        <div class="container">
+            <div class="row vertical-centered-text ">
+                <div class="col-md-6">
+                    <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
+                </div>
+                <div class="col-md-6 footer-nav">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a class="page-scroll" href="#about">Home</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#services">About Us</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#portfolio">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        </div>
-    </div>
-    </div>
-    </div>
-</div>
+    </footer>
 
-<footer>
-<div class="row">
-<div class="col-md-6">
-    <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
-</div>
-<div class="col-md-6 footer-nav">
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-        <a class="page-scroll" href="#about">Home</a>
-        </li>
-        <li>
-        <a class="page-scroll" href="#services">About Us</a>
-        </li>
-        <li>
-        <a class="page-scroll" href="#portfolio">Contact Us</a>
-        </li>
-    </ul>
-</div>
-</div>
-</footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/jquery.js"></script>
