--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -21,49 +21,49 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  </head><!--/head-->
-  <body>
+</head><!--/head-->
+<body>
 
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="images/logo.png" alt="">
-                </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a class="page-scroll" href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="about-us.html">About Us</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="services.html">Services</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="blog.html">Blog</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand page-scroll" href="#page-top">
+            <img src="images/logo.png" alt="">
+          </a>
         </div>
-    </nav>  
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a class="page-scroll" href="index.html">Home</a>
+            </li>
+            <li>
+              <a class="page-scroll" href="about-us.html">About Us</a>
+            </li>
+            <li>
+              <a class="page-scroll" href="services.html">Services</a>
+            </li>
+            <li>
+              <a class="page-scroll" href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a class="page-scroll" href="blog.html">Blog</a>
+            </li>
+            <li>
+              <a class="page-scroll" href="contact-us.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <section class="cabecera-verde">
         <div class="container">
             <div class="row vertical-centered-text">
@@ -180,160 +180,160 @@
                 <li>
                   <a href="#" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
-                  </a>
-                </li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li>
-                  <a href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
-        </div>
-    </section>
-    <div class="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
-            <h3>About Us</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
-          </div>
-          <div class="col-md-3 fila">
-            <h3>Company</h3>
-            <a href="">
+                </a>
+            </li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li>
+              <a href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        </li>
+    </ul>
+</nav>
+</div>
+</section>
+<div class="about">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <h3>About Us</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
+    </div>
+    <div class="col-md-3 fila">
+        <h3>Company</h3>
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>The company</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Our Team</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Our Partners</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Our Services</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Faq</span>
-            </a>
+        </a>
 
-             <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Contact Us</span>
-            </a>
+        </a>
 
-             <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Privacy Policy</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Terms of Use</span>
-            </a>
+        </a>
 
-            <a href="">
+        <a href="">
             <i class="fa fa-angle-right"></i>
             <span>Copyright</span>
-            </a>
-          </div>
+        </a>
+    </div>
 
-          <div class="col-md-3 col-xs-12">
-            <h3>Latest Blog</h3>
-            <div class="row foto">
+    <div class="col-md-3 col-xs-12">
+        <h3>Latest Blog</h3>
+        <div class="row foto">
             <div class="col-md-4 col-xs-2">
-            <a href="#">
-            <img class="media-objet img-full" src="images/blog/thumb1.jpg">
-            </a>  
+                <a href="#">
+                    <img class="media-objet img-full" src="images/blog/thumb1.jpg">
+                </a>  
             </div>
             <div class="col-md-8 col-xs-10">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 17 Aug 2013</h6>
             </div>
-            </div>
+        </div>
 
-            <div class="row foto">
+        <div class="row foto">
             <div class="col-md-4 col-xs-2">
-            <a href="#">
-            <img class="media-objet img-full" src="images/blog/thumb2.jpg">
-            </a>  
+                <a href="#">
+                    <img class="media-objet img-full" src="images/blog/thumb2.jpg">
+                </a>  
             </div>
             <div class="col-md-8 col-xs-10">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 13 Sep 2013</h6>
             </div>
-            </div>
+        </div>
 
-            <div class="row foto">
+        <div class="row foto">
             <div class="col-md-4 col-xs-2">
-            <a href="#">
-            <img class="media-objet img-full" src="images/blog/thumb3.jpg">
-            </a>  
+                <a href="#">
+                    <img class="media-objet img-full" src="images/blog/thumb3.jpg">
+                </a>  
             </div>
             <div class="col-md-8 col-xs-10">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 11 Jul 2013</h6>
             </div>
-            </div>
-        </div>
-
-          <div class="col-md-3">
-            <h3>Address</h3>
-            <br>
-            <h5>Twitter, Inc</h5>
-            <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
-            <div class="go">
-                <h3>Newsletter</h3>
-            <div class="input-group">
-            <input type="text" class="form-control" placeholder="Enter your email">
-            <span class="input-group-btn">
-            <button class="btn btn-danger" type="button">Go!</button>
-            </span>
-            </div>
-            </div>
-        </div>
-        </div>
         </div>
     </div>
 
-    <footer>
-        <div class="container">
-            <div class="row vertical-centered-text ">
-                <div class="col-md-6 col-xs-12">
-                    <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
-                </div>
-                <div class="col-md-6 col-xs-12 footer-nav">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a class="page-scroll" href="index.html">Home</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="about-us.html">About Us</a>
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="contact.html">Contact Us</a>
-                        </li>
-                    </ul>
-                </div>
+    <div class="col-md-3">
+        <h3>Address</h3>
+        <br>
+        <h5>Twitter, Inc</h5>
+        <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
+        <div class="go">
+            <h3>Newsletter</h3>
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Enter your email">
+                <span class="input-group-btn">
+                    <button class="btn btn-danger" type="button">Go!</button>
+                </span>
             </div>
         </div>
-    </footer>
+    </div>
+</div>
+</div>
+</div>
 
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
-  </body>
+<footer>
+    <div class="container">
+        <div class="row vertical-centered-text ">
+            <div class="col-md-6 col-xs-12">
+                <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
+            </div>
+            <div class="col-md-6 col-xs-12 footer-nav">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="about-us.html">About Us</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
+</body>
 </html>
