--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <div class="col-md-3">
                <ul class="list-inline">
                 <li>
-                  <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                  <a href="#" class="btn-social btn-outline"><i class="fa fa-twitter"></i></a>
                 </li>           
               </ul>
             </div>
@@ -152,7 +152,7 @@
             <div class="col-md-3">
              <ul class="list-inline">
               <li>
-                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                <a href="#" class="btn-social btn-outline"><i class="fa fa-google-plus"></i></a>
               </li>           
             </ul>
           </div>
